[package]
name = "competitive-programming"
version = "0.1.0"
authors = ["kuwata0037 <kuwata0037@gmail.com>"]
edition = "2018"
publish = false

# ref: https://github.com/rust-lang-ja/atcoder-rust-base/blob/ja-all-enabled/Cargo.toml
[dependencies]
# イテレータの拡張
itertools = "=0.9.0"
# `BTreeMap`, `BTreeSet`, `HashMap`, `HashSet`のリテラル用マクロ
maplit = "=1.0.2"
# 競技プログラミングの入出力サポートその1
proconio = { version = "=0.3.6", features = ["derive"] }
